@@ -55,6 +55,14 @@ set gned(icons) {}
 # ned($key,$field)
 
 
+#
+# simple debug-print procedure
+#
+proc debug {str} {
+   # uncomment the next line if you want debug messages
+   #puts "dbg: $str"
+}
+
 #===================================================================
 #    MAIN GNED WINDOW
 #===================================================================
@@ -448,10 +456,14 @@ proc checkVersion {} {
       focus .f.b
       wm protocol . WM_DELETE_WINDOW {exit}
       tkwait variable ok
-   }
-   if {[string compare $tk_patchLevel "8.0p1"]<0} {
+   } elseif {[string match "8.0.*" $tk_patchLevel]} {
+      if {[string compare $tk_patchLevel "8.0.1"]<0} {
+         tk_messageBox -title {Warning} -type ok -icon warning \
+              -message {Old Tcl/Tk version. At least 8.0p1 is strongly recommended!}
+      }
+   } elseif {$tk_version==8.0 && [string compare $tk_patchLevel "8.0p1"]<0} {
       tk_messageBox -title {Warning} -type ok -icon warning \
-        -message {Old Tcl/Tk version. At least 8.0p1 is strongly recommended!}
+           -message {Old Tcl/Tk version. At least 8.0p1 is strongly recommended!}
    }
 }
 
